samples/_failures_safe/1761318920_d6e886_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3259584.c: In function ‘main’:
./samples/SAFE/__tmp_a3259584.c:152:5: error: expected expression at end of input
  152 |     add_edge(&
      |     ^~~~~~~~
./samples/SAFE/__tmp_a3259584.c:152:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_a3259584.c:32:6: note: declared here
   32 | void add_edge(Graph *g, int from, int to) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_a3259584.c:152:5: error: expected declaration or statement at end of input
  152 |     add_edge(&
      |     ^~~~~~~~
